// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialProductCard Snapshot Tests (T031 - Regression Detection) renders material product with multiple variations 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiCard-root d-flex flex-column css-qswd2k-MuiPaper-root-MuiCard-root-BaseProductCard-root"
  style="--Paper-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);"
>
  <div
    class="floating-badges-container MuiBox-root css-0"
  >
    <div
      aria-label="Subject: CM1"
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault subject-badge css-1lflu6f-MuiChip-root"
      role="img"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
      >
        CM1
      </span>
    </div>
  </div>
  <div
    class="MuiCardHeader-root product-header css-149tc0y-MuiCardHeader-root"
  >
    <div
      class="MuiCardHeader-avatar css-1r9wl67-MuiCardHeader-avatar"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault product-avatar css-18k2bs-MuiAvatar-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium product-avatar-icon css-1umw9bq-MuiSvgIcon-root"
          data-testid="LibraryBooksSharpIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6H2v16h16v-2H4zm18-4H6v16h16zm-3 9H9V9h10zm-4 4H9v-2h6zm4-8H9V5h10z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 product-title css-lgr0e7-MuiTypography-root"
      >
        CM1 Core Study Material
      </h4>
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 product-subtitle css-1wdzs8i-MuiTypography-root"
      />
    </div>
  </div>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <div
      class="product-variations MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 variations-title css-1ypmsg6-MuiTypography-root"
      >
        Product Variations
      </h6>
      <div
        class="MuiFormGroup-root MuiRadioGroup-root variations-group css-1mac7pt-MuiFormGroup-root"
        role="radiogroup"
      >
        <div
          class="MuiStack-root css-jfdv4h-MuiStack-root"
        >
          <div
            class="variation-option MuiBox-root css-13zunft"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd variation-control css-19opgx6-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1q72ply-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                  name="«r4b»"
                  type="radio"
                  value="101"
                />
                <span
                  class="css-9oxshb-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-oen5zo-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 variation-label css-bvuapi-MuiTypography-root"
              >
                Printed
              </p>
            </label>
            <p
              class="MuiTypography-root MuiTypography-body2 variation-price css-rhoigg-MuiTypography-root"
            >
              £150.00
            </p>
          </div>
          <div
            class="variation-option MuiBox-root css-1ahvo8b"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd variation-control css-19opgx6-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1q72ply-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                  name="«r4b»"
                  type="radio"
                  value="102"
                />
                <span
                  class="css-9oxshb-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 variation-label css-19hrykt-MuiTypography-root"
              >
                eBook
              </p>
            </label>
            <p
              class="MuiTypography-root MuiTypography-body2 variation-price css-rhoigg-MuiTypography-root"
            >
              £100.00
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-1q4nm6f-MuiCardActions-root"
  >
    <div
      class="price-container MuiBox-root css-0"
    >
      <div
        class="discount-options MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 discount-title css-1ypmsg6-MuiTypography-root"
        >
          Discount Options
        </h6>
        <div
          class="discount-radio-group MuiBox-root css-0"
        >
          <label
            class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd discount-radio-option css-19opgx6-MuiFormControlLabel-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1x0b2u0-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                disabled=""
                type="radio"
              />
              <span
                class="css-9oxshb-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
            </span>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 discount-label css-1ypmsg6-MuiTypography-root"
            >
              Retaker
            </h6>
          </label>
          <label
            class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd discount-radio-option css-19opgx6-MuiFormControlLabel-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1x0b2u0-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                disabled=""
                type="radio"
              />
              <span
                class="css-9oxshb-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
            </span>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 discount-label css-1ypmsg6-MuiTypography-root"
            >
              Additional Copy
            </h6>
          </label>
        </div>
      </div>
      <div
        class="price-action-section MuiBox-root css-0"
      >
        <div
          class="price-info-row MuiBox-root css-0"
        >
          <span
            class="MuiTypography-root MuiTypography-price price-display css-z2uw0f-MuiTypography-root"
          >
            £150.00
          </span>
          <button
            aria-label="Show price details"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary info-button css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="InfoOutlineIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
              />
            </svg>
          </button>
        </div>
        <div
          class="price-details-row MuiBox-root css-0"
        >
          <span
            class="MuiTypography-root MuiTypography-fineprint price-level-text css-1iv3s1z-MuiTypography-root"
          >
            Standard pricing
          </span>
          <span
            class="MuiTypography-root MuiTypography-fineprint vat-status-text css-1iv3s1z-MuiTypography-root"
          >
            Price includes VAT
          </span>
        </div>
        <button
          aria-label="Add to cart"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary add-to-cart-button css-74d805-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="AddShoppingCartIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2m10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2m-9.83-3.25.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MaterialProductCard Snapshot Tests (T031 - Regression Detection) renders material product with no variations 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiCard-root d-flex flex-column css-qswd2k-MuiPaper-root-MuiCard-root-BaseProductCard-root"
  style="--Paper-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);"
>
  <div
    class="floating-badges-container MuiBox-root css-0"
  >
    <div
      aria-label="Subject: undefined"
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault subject-badge css-1lflu6f-MuiChip-root"
      role="img"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
      />
    </div>
  </div>
  <div
    class="MuiCardHeader-root product-header css-149tc0y-MuiCardHeader-root"
  >
    <div
      class="MuiCardHeader-avatar css-1r9wl67-MuiCardHeader-avatar"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault product-avatar css-18k2bs-MuiAvatar-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium product-avatar-icon css-1umw9bq-MuiSvgIcon-root"
          data-testid="LibraryBooksSharpIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6H2v16h16v-2H4zm18-4H6v16h16zm-3 9H9V9h10zm-4 4H9v-2h6zm4-8H9V5h10z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 product-title css-lgr0e7-MuiTypography-root"
      >
        Test Product Without Variations
      </h4>
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 product-subtitle css-1wdzs8i-MuiTypography-root"
      />
    </div>
  </div>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <div
      class="product-variations MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 variations-title css-1ypmsg6-MuiTypography-root"
      >
        Product Variations
      </h6>
    </div>
  </div>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-1q4nm6f-MuiCardActions-root"
  >
    <div
      class="price-container MuiBox-root css-0"
    >
      <div
        class="discount-options MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 discount-title css-1ypmsg6-MuiTypography-root"
        >
          Discount Options
        </h6>
        <div
          class="discount-radio-group MuiBox-root css-0"
        >
          <label
            class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd discount-radio-option css-19opgx6-MuiFormControlLabel-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1x0b2u0-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                disabled=""
                type="radio"
              />
              <span
                class="css-9oxshb-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
            </span>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 discount-label css-1ypmsg6-MuiTypography-root"
            >
              Retaker
            </h6>
          </label>
          <label
            class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd discount-radio-option css-19opgx6-MuiFormControlLabel-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1x0b2u0-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                disabled=""
                type="radio"
              />
              <span
                class="css-9oxshb-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
            </span>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 discount-label css-1ypmsg6-MuiTypography-root"
            >
              Additional Copy
            </h6>
          </label>
        </div>
      </div>
      <div
        class="price-action-section MuiBox-root css-0"
      >
        <div
          class="price-info-row MuiBox-root css-0"
        >
          <span
            class="MuiTypography-root MuiTypography-price price-display css-z2uw0f-MuiTypography-root"
          >
            -
          </span>
          <button
            aria-label="Show price details"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary info-button css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="InfoOutlineIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
              />
            </svg>
          </button>
        </div>
        <div
          class="price-details-row MuiBox-root css-0"
        >
          <span
            class="MuiTypography-root MuiTypography-fineprint price-level-text css-1iv3s1z-MuiTypography-root"
          >
            Standard pricing
          </span>
          <span
            class="MuiTypography-root MuiTypography-fineprint vat-status-text css-1iv3s1z-MuiTypography-root"
          >
            Price includes VAT
          </span>
        </div>
        <button
          aria-label="Add to cart"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary add-to-cart-button css-74d805-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="AddShoppingCartIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2m10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2m-9.83-3.25.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MaterialProductCard Snapshot Tests (T031 - Regression Detection) renders material product with single variation 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiCard-root d-flex flex-column css-qswd2k-MuiPaper-root-MuiCard-root-BaseProductCard-root"
  style="--Paper-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);"
>
  <div
    class="floating-badges-container MuiBox-root css-0"
  >
    <div
      aria-label="Subject: CB1"
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault subject-badge css-1lflu6f-MuiChip-root"
      role="img"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
      >
        CB1
      </span>
    </div>
  </div>
  <div
    class="MuiCardHeader-root product-header css-149tc0y-MuiCardHeader-root"
  >
    <div
      class="MuiCardHeader-avatar css-1r9wl67-MuiCardHeader-avatar"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault product-avatar css-18k2bs-MuiAvatar-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium product-avatar-icon css-1umw9bq-MuiSvgIcon-root"
          data-testid="LibraryBooksSharpIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6H2v16h16v-2H4zm18-4H6v16h16zm-3 9H9V9h10zm-4 4H9v-2h6zm4-8H9V5h10z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 product-title css-lgr0e7-MuiTypography-root"
      >
        CB1 Mock Exam Pack
      </h4>
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 product-subtitle css-1wdzs8i-MuiTypography-root"
      />
    </div>
  </div>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <div
      class="product-variations MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 variations-title css-1ypmsg6-MuiTypography-root"
      >
        Product Variations
      </h6>
      <div
        class="MuiFormGroup-root MuiRadioGroup-root variations-group css-1mac7pt-MuiFormGroup-root"
        role="radiogroup"
      >
        <div
          class="MuiStack-root css-jfdv4h-MuiStack-root"
        >
          <div
            class="variation-option MuiBox-root css-13zunft"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd variation-control css-19opgx6-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1q72ply-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                  name="«r4i»"
                  type="radio"
                  value="201"
                />
                <span
                  class="css-9oxshb-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-oen5zo-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 variation-label css-bvuapi-MuiTypography-root"
              >
                Standard
              </p>
            </label>
            <p
              class="MuiTypography-root MuiTypography-body2 variation-price css-rhoigg-MuiTypography-root"
            >
              £49.99
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-1q4nm6f-MuiCardActions-root"
  >
    <div
      class="price-container MuiBox-root css-0"
    >
      <div
        class="discount-options MuiBox-root css-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 discount-title css-1ypmsg6-MuiTypography-root"
        >
          Discount Options
        </h6>
        <div
          class="discount-radio-group MuiBox-root css-0"
        >
          <label
            class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd discount-radio-option css-19opgx6-MuiFormControlLabel-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1x0b2u0-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                disabled=""
                type="radio"
              />
              <span
                class="css-9oxshb-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
            </span>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 discount-label css-1ypmsg6-MuiTypography-root"
            >
              Retaker
            </h6>
          </label>
          <label
            class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd discount-radio-option css-19opgx6-MuiFormControlLabel-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-disabled MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-1x0b2u0-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                disabled=""
                type="radio"
              />
              <span
                class="css-9oxshb-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10fh2vq-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-4reyio-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
            </span>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 discount-label css-1ypmsg6-MuiTypography-root"
            >
              Additional Copy
            </h6>
          </label>
        </div>
      </div>
      <div
        class="price-action-section MuiBox-root css-0"
      >
        <div
          class="price-info-row MuiBox-root css-0"
        >
          <span
            class="MuiTypography-root MuiTypography-price price-display css-z2uw0f-MuiTypography-root"
          >
            £49.99
          </span>
          <button
            aria-label="Show price details"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary info-button css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="InfoOutlineIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
              />
            </svg>
          </button>
        </div>
        <div
          class="price-details-row MuiBox-root css-0"
        >
          <span
            class="MuiTypography-root MuiTypography-fineprint price-level-text css-1iv3s1z-MuiTypography-root"
          >
            Standard pricing
          </span>
          <span
            class="MuiTypography-root MuiTypography-fineprint vat-status-text css-1iv3s1z-MuiTypography-root"
          >
            Price includes VAT
          </span>
        </div>
        <button
          aria-label="Add to cart"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary add-to-cart-button css-74d805-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="AddShoppingCartIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 9h2V6h3V4h-3V1h-2v3H8v2h3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2m10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2m-9.83-3.25.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
